[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scenes/case_01/DigitalResusQuestC.gd" id="1_script"]
[ext_resource type="Theme" uid="uid://bc6epa3jyjbri" path="res://ui/theme_terminal_amber.tres" id="2_theme"]
[ext_resource type="PackedScene" path="res://scenes/ui/NetSlot.tscn" id="3_slot"]

[node name="DigitalResusQuestC" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.06, 0.07, 0.08, 1)

[node name="SafeArea" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 12

[node name="MainVBox" type="VBoxContainer" parent="SafeArea"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="Header" type="HBoxContainer" parent="SafeArea/MainVBox"]
custom_minimum_size = Vector2(0, 72)
layout_mode = 2
theme_override_constants/separation = 10

[node name="BtnBack" type="Button" parent="SafeArea/MainVBox/Header"]
custom_minimum_size = Vector2(72, 72)
layout_mode = 2
text = "<"

[node name="TitleLabel" type="Label" parent="SafeArea/MainVBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "ДЕЛО"
vertical_alignment = 1

[node name="StageLabel" type="Label" parent="SafeArea/MainVBox/Header"]
custom_minimum_size = Vector2(112, 0)
layout_mode = 2
text = "ЭТАП C"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StabilityBar" type="ProgressBar" parent="SafeArea/MainVBox/Header"]
custom_minimum_size = Vector2(220, 28)
layout_mode = 2
size_flags_vertical = 4
value = 100.0
show_percentage = false

[node name="PromptCard" type="PanelContainer" parent="SafeArea/MainVBox"]
layout_mode = 2

[node name="PromptLabel" type="Label" parent="SafeArea/MainVBox/PromptCard"]
custom_minimum_size = Vector2(0, 82)
layout_mode = 2
text = "ЗАДАНИЕ"
autowrap_mode = 2

[node name="DiagramCard" type="PanelContainer" parent="SafeArea/MainVBox"]
layout_mode = 2

[node name="DiagramVBox" type="VBoxContainer" parent="SafeArea/MainVBox/DiagramCard"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="DiagramTitle" type="Label" parent="SafeArea/MainVBox/DiagramCard/DiagramVBox"]
layout_mode = 2
text = "СХЕМА ПЕРИМЕТРА"

[node name="DiagramRow" type="HBoxContainer" parent="SafeArea/MainVBox/DiagramCard/DiagramVBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="PcNode" type="PanelContainer" parent="SafeArea/MainVBox/DiagramCard/DiagramVBox/DiagramRow"]
custom_minimum_size = Vector2(100, 110)
layout_mode = 2

[node name="PcLabel" type="Label" parent="SafeArea/MainVBox/DiagramCard/DiagramVBox/DiagramRow/PcNode"]
layout_mode = 2
text = "ПК"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Slot1" parent="SafeArea/MainVBox/DiagramCard/DiagramVBox/DiagramRow" instance=ExtResource("3_slot")]
layout_mode = 2
size_flags_horizontal = 3
slot_index = 1

[node name="Slot2" parent="SafeArea/MainVBox/DiagramCard/DiagramVBox/DiagramRow" instance=ExtResource("3_slot")]
layout_mode = 2
size_flags_horizontal = 3
slot_index = 2

[node name="Slot3" parent="SafeArea/MainVBox/DiagramCard/DiagramVBox/DiagramRow" instance=ExtResource("3_slot")]
layout_mode = 2
size_flags_horizontal = 3
slot_index = 3

[node name="ServerNode" type="PanelContainer" parent="SafeArea/MainVBox/DiagramCard/DiagramVBox/DiagramRow"]
custom_minimum_size = Vector2(120, 110)
layout_mode = 2

[node name="ServerLabel" type="Label" parent="SafeArea/MainVBox/DiagramCard/DiagramVBox/DiagramRow/ServerNode"]
layout_mode = 2
text = "СЕРВЕР"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RiskCard" type="PanelContainer" parent="SafeArea/MainVBox"]
layout_mode = 2

[node name="RiskVBox" type="VBoxContainer" parent="SafeArea/MainVBox/RiskCard"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="RiskTitle" type="Label" parent="SafeArea/MainVBox/RiskCard/RiskVBox"]
layout_mode = 2
text = "ПАНЕЛЬ РИСКОВ"

[node name="CollisionsRow" type="HBoxContainer" parent="SafeArea/MainVBox/RiskCard/RiskVBox"]
layout_mode = 2

[node name="CollisionsLabel" type="Label" parent="SafeArea/MainVBox/RiskCard/RiskVBox/CollisionsRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "КОЛЛИЗИИ"

[node name="CollisionsValue" type="Label" parent="SafeArea/MainVBox/RiskCard/RiskVBox/CollisionsRow"]
layout_mode = 2
text = "СРЕДНИЙ"

[node name="EavesdropRow" type="HBoxContainer" parent="SafeArea/MainVBox/RiskCard/RiskVBox"]
layout_mode = 2

[node name="EavesdropLabel" type="Label" parent="SafeArea/MainVBox/RiskCard/RiskVBox/EavesdropRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "ПЕРЕХВАТ"

[node name="EavesdropValue" type="Label" parent="SafeArea/MainVBox/RiskCard/RiskVBox/EavesdropRow"]
layout_mode = 2
text = "СРЕДНИЙ"

[node name="FilteringRow" type="HBoxContainer" parent="SafeArea/MainVBox/RiskCard/RiskVBox"]
layout_mode = 2

[node name="FilteringLabel" type="Label" parent="SafeArea/MainVBox/RiskCard/RiskVBox/FilteringRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "ФИЛЬТРАЦИЯ"

[node name="FilteringValue" type="Label" parent="SafeArea/MainVBox/RiskCard/RiskVBox/FilteringRow"]
layout_mode = 2
text = "ВЫКЛ"

[node name="MediaRow" type="HBoxContainer" parent="SafeArea/MainVBox/RiskCard/RiskVBox"]
layout_mode = 2

[node name="MediaLabel" type="Label" parent="SafeArea/MainVBox/RiskCard/RiskVBox/MediaRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "СРЕДА"

[node name="MediaValue" type="Label" parent="SafeArea/MainVBox/RiskCard/RiskVBox/MediaRow"]
layout_mode = 2
text = "НЕИЗВЕСТНО"

[node name="PaletteCard" type="PanelContainer" parent="SafeArea/MainVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="PaletteVBox" type="VBoxContainer" parent="SafeArea/MainVBox/PaletteCard"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="PaletteTitle" type="Label" parent="SafeArea/MainVBox/PaletteCard/PaletteVBox"]
layout_mode = 2
text = "ПАЛИТРА ОБОРУДОВАНИЯ"

[node name="Scroll" type="ScrollContainer" parent="SafeArea/MainVBox/PaletteCard/PaletteVBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PaletteFlow" type="GridContainer" parent="SafeArea/MainVBox/PaletteCard/PaletteVBox/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8

[node name="ExplanationCard" type="PanelContainer" parent="SafeArea/MainVBox"]
visible = false
custom_minimum_size = Vector2(0, 180)
layout_mode = 2

[node name="ExplVBox" type="VBoxContainer" parent="SafeArea/MainVBox/ExplanationCard"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="ExplHeadline" type="Label" parent="SafeArea/MainVBox/ExplanationCard/ExplVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "ЗАГОЛОВОК"

[node name="ExplDetails" type="RichTextLabel" parent="SafeArea/MainVBox/ExplanationCard/ExplVBox"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
fit_content = false
scroll_active = true
text = ""
autowrap_mode = 2

[node name="ExplWhy" type="RichTextLabel" parent="SafeArea/MainVBox/ExplanationCard/ExplVBox"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
fit_content = false
scroll_active = true
text = ""
autowrap_mode = 2

[node name="BottomBar" type="HBoxContainer" parent="SafeArea/MainVBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="StatusLabel" type="Label" parent="SafeArea/MainVBox/BottomBar"]
custom_minimum_size = Vector2(0, 72)
layout_mode = 2
size_flags_horizontal = 3
text = "СТАТУС"
autowrap_mode = 2
vertical_alignment = 1

[node name="BtnReset" type="Button" parent="SafeArea/MainVBox/BottomBar"]
custom_minimum_size = Vector2(150, 72)
layout_mode = 2
text = "СБРОС"

[node name="BtnAnalyze" type="Button" parent="SafeArea/MainVBox/BottomBar"]
custom_minimum_size = Vector2(190, 72)
layout_mode = 2
text = "АНАЛИЗ"
